# resume_tailorator

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  resume.md  scraped_content.html  test_resume_parsing.py
.github/: copilot-instructions.md
files/: job_posting.md  resume.md
models/: workflow.py
models/agents/: deps.py  output.py
tools/: playwright.py
utils/: markdown_writer.py  pdf_converter.py  validate_inputs.py
workflows/: __init__.py  agents.py
